Fix nav bars on top and bottom to stretch across the screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 
 
 /* Hide Order Details */
-.customerCart, .pizzaOrderOptionsDiv    {
+.customerCart, .pizzaOrderOptionsDiv, .menuDiv {
   display: none;
 }
 
